# gesture_speech

./: .gitignore  README.md  environment.yml  launch_gesture_speech.sh  launcher.py  pyproject.toml
data/: settings.json
notebooks/: gesture_speech.ipynb
