[project]
name = "gesture-speech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10.35",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "praat-parselmouth>=0.4.7",
    "python-vlc>=3.0.21203",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
